k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alffino
  labels:
    app.kubernetes.io/name: alffino-python-hello
