k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alffino-python-hello
  namespace: alffino
spec:
  selector:
    app.kubernetes.io/name: alffino-python-hello
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
