k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magnit-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: app.magnitdev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magnit-service
                port:
                  number: 80
