k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alffino-python-hello-ingress
  namespace: alffino
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alffino-python-hello
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8000
